--- a/flask_app/static/styles.css
+++ b/flask_app/static/styles.css
@@ -2,6 +2,16 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+nav {
+    float: right;
+    color: #003835;
+    text-align: center;
+    padding: 14px 16px;
+    padding-right: 200px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
 .container {
     max-width: 980px;
     margin: 0 auto;
@@ -22,4 +32,18 @@ nav {
 
 nav a{
     margin: 0 20px;
+}
+
+/* Show One User */
+input, select {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.box {
+    display: block;
+    margin-bottom: 5px;
+    border: solid black 2px;
+    width: 600px;
+    padding: 20px;
 }
