--- a/flask_app/templates/Read_All.html
+++ b/flask_app/templates/Read_All.html
@@ -8,6 +8,9 @@
     <title>Read All</title>
 </head>
 <body>
+    <nav>
+        <a href="/">TO HOME!</a>
+    </nav>
     <div class="container">
         <h1>All Users</h1>
         <table>
@@ -18,6 +21,7 @@
                     <th>Last Name</th>
                     <th>Email</th>
                     <th>Created At</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -28,6 +32,11 @@
                     <td>{{ user.last_name }}</td>
                     <td>{{ user.email }}</td>
                     <td>{{ user.created_at }}</td>
+                    <td>
+                        <a href="/user/show_one/{{ user.id }}">Show</a> |
+                        <a href="/user/edit_one/{{ user.id }}">Edit</a> |
+                        <a href="/user/delete/{{ user.id }}">Delete</a>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
