--- a/flask_app/templates/create.html
+++ b/flask_app/templates/create.html
@@ -8,9 +8,12 @@
     <title>Create New User</title>
 </head>
 <body>
+    <nav>
+        <a href="/">TO HOME!</a>
+    </nav>
     <div>
         <div class="d-flex col justify-content-space-around">
-            <h1>Create A Song!</h1>
+            <h1>Create A User!</h1>
             <a href="/">Home</a>
         </div>
         <form action="/create_user" method="POST">
